# tokonoma

./: .clang_complete  .gitignore  3  LICENSE  README.md  meson.build  meson_options.txt
apk/: AndroidManifest.xml.in  AndroidManifest32.xml.in  README.md  android_cross.txt  android_cross32.txt  build.sh  meson.build  setup.sh
assets/: atmosphere.qwe  licenses.md  planet.atmos.qwe
assets/gltf/: cube.glb  license.md  test-blend.gltf  test.gltf  test2.gltf  test3.gltf  thouse.gltf  tstation.gltf
assets/lens/: license.txt
docs/: .clang_complete  android.cross  fill2.frag  fill2.vert  layout.glsl  links.bat  notes.md  removed.md  scene.cpp  scene.hpp
docs/concepts/: audioEffect.hpp  audioGroup.hpp  audioQ.hpp  blur.comp  cam2.hpp  camcon.hpp  cameraInfo.hpp  controller.hpp  cube.vert  draw-event.md  fx.hpp  fx.md  gaussian.cpp  lockfree-doublebuffered.hpp  mcam.hpp  ringbuffer.hpp  sss_shadowmap.vert  stackImpl.hpp  stash  stream.hpp  terrain.glsl  texture.hpp  types.hpp
docs/tests/: f16.cpp  fb.cpp  function.cpp  graph.cpp  meson.build  misc.cpp  quaternion.cpp  sh.cpp  transform.cpp
include/: argagg.hpp  fuen_api.h  glsl.hpp  spirv_reflect.h  tinygltf.hpp  vil_api.h
include/stage/: app.hpp  audio.hpp  bits.hpp  camera.hpp  defer.hpp  deriveCast.hpp  f16.hpp  fb.hpp  geometry.hpp  gltf.hpp  headless.hpp  physics.hpp  quaternion.hpp  render.hpp  texture.hpp  transform.hpp  types.hpp  typesafe.hpp  util.hpp  window.hpp
include/tkn/: app.hpp  app2.hpp  audio-cubeb.hpp  audio.hpp  audio3D.hpp  audioFeedback.hpp  bits.hpp  callable.hpp  camera.hpp  camera2.hpp  ccam.hpp  color.hpp  config.hpp.in  connection.hpp  defer.hpp  deriveCast.hpp  f16.hpp  fb.hpp  features.hpp  file.hpp  formats.hpp  fswatch.hpp  function.hpp  geometry.hpp  glsl.hpp  gltf.hpp  headless.hpp  image.hpp  levelView.hpp  lockfree.hpp  math.hpp  meson.build  physics.hpp  pipeline.hpp  pulseRecorder.hpp  qcamera.hpp  quaternion.hpp  recvBuf.hpp  render.hpp  ringbuffer.hpp  (+19 more)
src/: meson.build
src/atmosphere/: main.cpp  scatter.glsl  sky.vert
src/audio/: main.cpp
src/automaton/: ant.comp  automaton.cpp  automaton.hpp  hex.vert  main.cpp  predprey.comp
src/bezier/: line.frag  main.cpp  point.frag  point.vert  util.hpp
src/br/: audio.hpp  main.cpp  meson.build  model.frag  model.vert
src/cloth/: apply.comp  cloth.comp  main.cpp  meson.build  software.cpp
src/clouds/: clouds.frag  genNoise.comp  main.cpp
src/curves/: main.cpp
src/daudio/: cubeb.cpp  cubeb2.cpp  cubeb3.cpp  main.cpp  meson.build
src/ddd/: light.cpp  light.hpp  (+15 more)
src/playground/: atlas.hpp  audio.cpp  blur.cpp  bullet.cpp  fft.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  meson.build  steamaudio.cpp  tta.cpp
src/playground/cpsc322/: csp.cpp  search.cpp
src/playground/daudio/: cubeb.cpp  cubeb2.cpp  cubeb3.cpp  cubeb4.cpp  main.cpp  meson.build
src/playground/spirv/: meson.build
src/shaders/: advect.comp  ant.comp  comp.spv  diffuse.comp  fluid_texture.frag  frag.spv  fullscreen.vert  geometry.glsl  hex.comp  hex.vert  hex_line.vert  incolor.frag  iro.comp  iro.frag  iro.vert  iro_building.vert  iro_outline.vert  iroset.comp  light.frag  light.vert  light_pp.frag  line.vert  math.glsl  meson.build  model.frag  model.vert  noise.glsl  particle.comp  particle.frag  particle.vert  predprey.comp  pressure.comp  project.comp  ps.comp  ps.frag  ps.vert  sen.comp  sen.frag  senpt.frag  senr.frag  (+14 more)
src/shaders/deferred/: gbuf.frag  gbuf.vert  light.frag  pp.frag
src/shaders/include/: bicubic.glsl  color.glsl  fxaa.glsl  geometry.glsl  glsl.hpp  hex.glsl  iro.glsl  math.glsl  noise.glsl  octree.glsl  patterns.glsl  pbr.glsl  ray.glsl  samples.glsl  scene.frag.glsl  scene.glsl  smaa.glsl  snoise.glsl  spharm.glsl  subd.glsl  tonemap.glsl  util.glsl
src/shaders/old/: hex.vert
src/shaders/sviewer/: atmosphere.frag  clouds.frag  color.glsl  dummy.frag  math.frag  raymarch.frag  svdummy.frag  voronoi.frag
src/stage/: app.cpp  audio.cpp  camera.cpp  defer.cpp  f16.cpp  geometry.cpp  gl.hpp  headless.cpp  image.cpp  image.hpp  json.hpp  meson.build  physics.cpp  render.cpp  render.hpp  texture.cpp  texture2.cpp  tinygltf.cpp  window.cpp
src/stage/image/: jpeg.cpp  jpeg_turbo.cpp  ktx.cpp  png.cpp
src/stage/scene/: environment.cpp  light.cpp  material.cpp  pbr.cpp  primitive.cpp  scene.cpp  shape.cpp  skybox.cpp
src/stage/shaders/: brdflut.comp  color.frag  convolute.comp  equirectToCube.comp  equirectToCube.frag  fullscreen.vert  fullscreen_transform.vert  irradiance.comp  irradiance.frag  shadowmap.frag  shadowmap.vert  shadowmapCube.frag  shadowmapCube.vert  simple.vert  simple2.vert  simple3.vert  skybox.frag  skybox.vert
src/tkn/: app.cpp  app2.cpp  audio-cubeb.cpp  audio.cpp  audio3D.cpp  camera.cpp  camera2.cpp  ccam.cpp  color.cpp  connection.cpp  defer.cpp  f16.cpp  formats.cpp  fswatch_inotify.cpp  fswatch_stdfs.cpp  geometry.cpp  gl.hpp  headeronly.cpp  headless.cpp  image.cpp  image.hpp  meson.build  physics.cpp  pipeline.cpp  qcamera.cpp  render.cpp  render.hpp  sampling.cpp  shader.cpp  shaderReload.cpp  singlePassApp.cpp  sky.cpp  sound.cpp  stream.cpp  taa.cpp  texture.cpp  threadPool.cpp  timeWidget.cpp  transform.cpp  util.cpp  (+2 more)
src/tkn/image/: exr.cpp  jpeg.cpp  jpeg_dummy.cpp  jpeg_turbo.cpp  ktx.cpp  png.cpp  tinyexr.hpp
src/tkn/kissfft/: _kiss_fft_guts.h
src/tkn/passes/: bloom.cpp  blur.cpp  highlight.cpp  luminance.cpp  taa.cpp
src/tkn/scene/: environment.cpp  light.cpp  material.cpp  pbr.cpp  pipeline.md  scene.cpp  shape.cpp
src/tkn/shaders/: brdflut.comp  color.frag  convolute.comp  highlight.comp  shProj.comp  shadow.frag  shadow.vert  shadowPoint.frag  shadowPoint.vert  shadowmap.frag  shadowmap.vert  shadowmapCube.frag  shadowmapCube.vert  simple3.vert  skybox.frag  skybox.vert  test.frag  texture.frag  textureTonemap.frag
src/tkn/sky/: ArHosekSkyModel.c  ArHosekSkyModelData_CIEXYZ.h
subprojects/: b2d.wrap  bullet.wrap  cubeb.wrap  dlg.wrap  glslang.wrap  ny.wrap  nytl.wrap  png.wrap  rvg.wrap  steamaudio.wrap  turbojpeg.wrap  vpp.wrap  vui.wrap  zlib.wrap
(+364 files in other folders)
