tf16 = executable('f16', 'f16.cpp', dependencies: tkn_dep)
test('f16', tf16)

tgraph = executable('graph', 'graph.cpp', dependencies: tkn_dep)
test('graph', tgraph)

tfb = executable('fb', 'fb.cpp', dependencies: tkn_dep)
test('fb', tfb)

tquat = executable('quaternion', 'quaternion.cpp', dependencies: tkn_dep)
test('quat', tquat)

ttransform = executable('transform', 'transform.cpp', dependencies: tkn_dep)
test('transform', ttransform)
