daudio = build_target('daudio', [
		'main.cpp',
	], dependencies: [tkn_dep, dep_cubeb, dep_playground],
	target_type: exetarget)

daudiorc = build_target('daudiorc', [
		'cubeb.cpp',
	], dependencies: [tkn_dep, dep_cubeb, dep_playground],
	target_type: exetarget)

daudiosin = build_target('daudiosin', [
		'cubeb2.cpp',
	], dependencies: [tkn_dep, dep_cubeb, dep_playground],
	target_type: exetarget)

daudioravg = build_target('daudioravg', [
		'cubeb3.cpp',
	], dependencies: [tkn_dep, dep_cubeb, dep_playground],
	target_type: exetarget)

