executable('pg',
	'main6.cpp',
	dependencies: [tkn_dep, dep_playground])

executable('pg-bullet',
	'bullet.cpp',
	dependencies: [tkn_dep, dep_bullet, dep_playground])

executable('pg-steamaudio',
	'steamaudio.cpp',
	dependencies: [tkn_dep, dep_steamaudio, dep_playground])

executable('fft',
	'fft.cpp',
	dependencies: [tkn_dep, dep_playground])

executable('blur', 'blur.cpp')

executable('audio',
	'audio.cpp',
	dependencies: [tkn_dep, tkn_audio_dep])

subdir('daudio')
subdir('spirv')
